# grid_search_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose-deploy-local.yml  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-graphite.yaml  docker-compose.yml  grid_search.cpp  grid_search.h  main.cpp  param.cpp  param.h  params.cpp  rabbitmq-config-local.json  rabbitmq-config.json
docs/: README.md
docs/measurements/: README.md
docs/measurements/16-Nodes/: README.md
docs/measurements/4-Nodes/: README.md
docs/measurements/8-Nodes/: README.md
docs/measurements/cloud/16-Nodes/: README.md
docs/measurements/cloud/4-Nodes/: README.md
docs/measurements/cloud/8-Nodes/: README.md
docs/measurements/server/16-Nodes/: README.md
docs/measurements/server/4-Nodes/: README.md
docs/measurements/server/8-Nodes/: README.md
grafana_config/: dashboard.json
src/: config_reader.cpp  grid_search.cpp  grid_search.h  main.cpp  params.cpp  params.h
src/master/: CMakeLists.txt  Dockerfile
src/master/resources/: data-mid.json  example-max.json  example-min.json
src/master/src/: MessageProcessor.cpp  MessageProcessor.h  Partition.cpp  Partition.h  Protocol.cpp  Protocol.h  config_reader.cpp  config_reader.h  constants.h  interval.cpp  interval.h  json_parsing.cpp  json_parsing.h  main.cpp  message_processor.cpp  message_processor.h  params.h  partition.cpp  partition.h  protocol.cpp  protocol.h  util.h
src/master/src/config_reader/: config_reader.cpp  config_reader.h
src/master/src/constants/: constants.h
src/master/src/interval/: interval.cpp  interval.h  partition.cpp  partition.h
src/master/src/manager/: manager.cpp  manager.h
src/master/src/message_processor/: message_processor.cpp  message_processor.h
src/master/src/protocol/: protocol.cpp  protocol.h
src/master/src/utils/: json_parsing.h  utils.h
src/rabbitmq/: Dockerfile
src/shared/: StatsdClient.hpp  UDPSender.hpp  constants.h
src/worker/: CMakeLists.txt  Dockerfile
src/worker/src/: ResultsDTO.cpp  ResultsDTO.h  avg_results_DTO.h  config_reader.cpp  constants.h  grid_search.cpp  grid_search.h  json_parsing.cpp  json_parsing.h  main.cpp  max_results_DTO.cpp  max_results_DTO.h  message_processor.cpp  message_processor.h  min_results_DTO.h  objective_fun.h  params.cpp  params.h  protocol.cpp  protocol.h  results_DTO.cpp  results_DTO.h
src/worker/src/config_reader/: config_reader.cpp  config_reader.h
src/worker/src/grid_search/: accumulator.cpp  accumulator.h  grid_search.cpp  grid_search.h  objective_fun.h  params.cpp  params.h
src/worker/src/message_processor/: message_processor.cpp  message_processor.h
src/worker/src/protocol/: protocol.cpp  protocol.h
src/worker/src/results_dto/: avg_results_DTO.cpp  avg_results_DTO.h  min_results_DTO.cpp
